log all configs